# SDFPhysics

./: .gitignore  CMakeLists.txt  README.md
src/: Alias.h  Application.cpp  Application.h  Canvas.cpp  Canvas.h  Configuration.h  Events.cpp  Events.h  Math.cpp  Math.h  Triangle.h  main.cpp  main.h
src/GFs/: AllGFs.h  GF.h
src/GFs/Operators/: GF_IntersectionOperator.h  GF_SmoothUnionOperator.h  GF_UnionOperator.h
src/GFs/Primitives/: GF_Box.h  GF_Circle.h  GF_Primitive.h
src/Physics/Verlet/: VerletObject.h  VerletSolver.h
src/SDFs/: AllSDFs.h  SDF.h  SDFUtils.h
src/SDFs/Operators/: IntersectionOperator.h  MinOperator.cpp  MinOperator.h  SDF_IntersectionOperator.h  SDF_SmoothUnionOperator.h  SDF_UnionOperator.h  SmoothUnionOperator.h  TranslateOperator.cpp  TranslateOperator.h  UnionOperator.h
src/SDFs/Primitives/: Box.cpp  Box.h  Circle.cpp  Circle.h  CoolS.h  Primitive.h  SDF_Arc.h  SDF_Box.h  SDF_Circle.h  SDF_CoolS.h  SDF_Primitive.h  SDF_RegularStar.h
src/Utils/: ImGuiUtils.h  Profiler.cpp  Profiler.h  ThreadPool.h
